Documentation extended by biogeochemical module

--- a/doc/a4.tex
+++ b/doc/a4.tex
@@ -1,5 +1,5 @@
 %
-%$Id: a4.tex,v 1.3 2005-11-15 12:07:31 lars Exp $
+%$Id: a4.tex,v 1.4 2005-12-02 20:21:54 hb Exp $
 %
 
 \documentclass[a4paper,twoside,11pt]{article}
@@ -64,7 +64,7 @@ Test Case Documentation
 
 {\sf \bf \Large
  \begin{center}
-  Version 3.2
+  Version 4.0
  \end{center}
 }
 
@@ -80,7 +80,7 @@ Test Case Documentation
 
 {\sf \bf \Large
  \begin{center}
-  Flow ---  Mixing --- Transport
+  Flow ---  Mixing --- Ecosystem dynamics
 \end{center}
 }
 
@@ -129,10 +129,12 @@ Test Case Documentation
 \include{util}
 
 \cleardoublepage
+\include{bioIntro}
+\include{bio}
+
+\cleardoublepage
 \include{extraIntro}
-%\include{sediment}
 \include{seagrass}
-%\include{bio}
 
 \cleardoublepage
 \include{cases}
