--- a/doc/gotm.bib
+++ b/doc/gotm.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm.bib,v 1.3 2005-08-16 14:42:17 hb Exp $
+%$Id: gotm.bib,v 1.4 2005-12-02 20:21:54 hb Exp $
 %
 
 @String{OMOD = "Ocean Modelling"}
@@ -16,6 +16,7 @@
 @String{SR = "Journal of Sea Research"}
 @String{QJR = "Q. J. R. Meteorol. Soc."}
 @String{JAOT = "Journal of Atmospheric and Oceanic Technology"}
+@String{GBC = "Global Biogeochemical Cycles"}
 
 
 @String{acc = "Accepted for publication"}
@@ -292,6 +293,20 @@
   pages = "175--208",
   year = "1998"  )
 
+@incollection{Brockmannetal1983,
+   author   = {U. H. Brockmann and V. Ittekott and G. Kattner and
+               K. Eberlein and K. D. Hammer},
+   title    = {Release of Dissolved Organic Substances in the Course of
+               Phytoplankton Blooms},
+   booktitle  = {{N}orth {S}ea Dynamics},
+   editor  = {J\"urgen S\"undermann and Walter Lenz},
+   pages    = {530-548},
+   year     = {1983},
+   publisher= {Springer},
+   note     = {},
+}
+
+
 @book{Brockmannetal85,
    editor   = {U. H. Brockmann and K. Eberlein and K. Huber and H.-J. Neubert
                and G\"unther Radach and Klaus Schulze},
@@ -302,6 +317,18 @@
    pages    = {450 pp.},
    address  = {Copenhagen, Denmark},
    year     = {1984},
+}
+
+@article{Bruggemanetal2005,
+   author   = {Jorn Bruggeman and Hans Burchard and Bob Kooi and
+               Ben Sommeijer},
+   title    = {A second-order, unconditionally stable, mass-conserving
+               integration scheme for biochemical systems},
+   journal  = ANM,
+   volume   = {},
+   pages    = {},
+   year     = {2005},
+   note     = sub,
 }
 
 
@@ -518,6 +545,17 @@ $k-\epsilon$ two-equation turbulence models",
    note     = {},
 }
 
+@article{Burchardetal2003b,
+   author   = {Hans Burchard and Eric Deleersnijder and Andreas Meister},
+   title    = {A high-order conservative {P}atankar-type discretisation
+              for stiff systems of production-destruction equations},
+   journal  = ANM,
+   volume   = {47},
+   pages    = {1-30},
+   year     = {2003},
+   note     = {},
+}
+
 @article{Burchardetal05,
    author   = {Hans Burchard and Karsten Bolding and Wilfried K\"uhn
                and Andreas Meister and Thomas Neumann and Lars Umlauf},
@@ -530,6 +568,17 @@ $k-\epsilon$ two-equation turbulence models",
    note     = acc,
 }
 
+
+@article{Burchardetal2005b,
+   author   = {Hans Burchard and Eric Deleersnijder and Andreas Meister},
+   title    = {Application of {M}odified {P}atankar schemes to stiff
+               biogeochemical models for the water column},
+   journal  = OD,
+   volume   = {},
+   pages    = {},
+   year     = {2005},
+   note     = acc,
+}
 
 
 
@@ -852,6 +901,18 @@ limnological range",
   pages = "1624--1641",
   year = "1998"   )
 
+@article{Daviesetal1984,
+   author   = {J. M. Davies and R. Paine},
+   title    = {Supply of organic matter in the northern {N}orth {S}ea
+              during a spring phytoplankton bloom},
+   journal  = MARBIO,
+   volume   = {78},
+   pages    = {315-324},
+   year     = {1984},
+   note     = {},
+}
+
+
 
 @article(Deardorff85,
   author = "J.~W. Deardorff and G.~E. Willis",
@@ -991,6 +1052,18 @@ limnological range",
   pages = "54--59",
   year = "2001"   )
 
+@article{Eberleinetal1980,
+   author   = {K. Eberlein and G. Kattner and U. Brockmann and K.D. Hammer},
+   title    = {Nitrogen and phosphorus in different water layers at the
+              Central Station during {FLEX} '76},
+   journal  = {"Meteor"-Forsch.-Ergebnisse, Reihe A},
+   volume   = {22},
+   pages    = {87-98},
+   year     = {1980},
+   note     = {},
+}
+
+
 @techreport(EiflerSchrimpf92,
    author   = "W. Eifler and W. Schrimpf",
    title    = "ISPRAMIX, a hydrodynamic program for computing regional sea circulation patterns and transfer processes",
@@ -1071,6 +1144,18 @@ limnological range",
   number = "14",
   pages = "2201--2214",
   year = "1993"   )
+
+@article{Fashametal1990,
+   author   = {M. J. R. Fasham and H. W. Ducklow and S. M. McKelvie},
+   title    = {A nitrogen-based model of plankton dynamics in the
+               oceanic mixed layer},
+   journal  = JMR,
+   volume   = {48},
+   pages    = {591-639},
+   year     = {1990},
+   note     = {},
+}
+
 
 @article{FEISTEL03,
    author   = {Rainer Feistel},
@@ -1496,6 +1581,18 @@ des Unterwasser-Strahlungsfeldes",
   title = "Photosynthesis, productivity, and growth: The physiological ecology of phytoplankton",
   journal = "Archiv f{\"u}r Hydrobiologie, Beiheft 10",
   year = "1978" )
+
+@article{Harrisonetal1996,
+   author   = {W. G. Harrison and L.R. Harris and B D. Irwin},
+   title    = {The kinetics of nitrogen utilization in the oceanic
+               mixed layer: {N}itrate and ammonium interactions at nanomolar
+               concentrations},
+   journal  = LIM,
+   volume   = {41},
+   pages    = {16-32},
+   year     = {1996},
+}
+
 
 @article(Hassid83,
   author = "S. Hassid and B. Galperin",
@@ -2051,6 +2148,19 @@ of phytoplankton",
   pages =  "98--105",
   year = "1967"    )
 
+@article{Krauseetal1980,
+   author   = {M. Krause and G. Radach},
+   title    = {On the succession of developmental stages of herbivorous
+               zooplankton in the northern North Sea during
+               FLEX '76},
+   journal  = {"Meteor"-Forsch.-Ergebnisse, Reihe A},
+   volume   = {22},
+   pages    = {133-149},
+   year     = {1980},
+   note     = {},
+}
+
+
 @article(Krauss79,
   author = "W. Krauss",
   title = "Inertial Waves in an Infinite Channel of Rectangular
@@ -2059,6 +2169,19 @@ Cross Section",
   number = "6",
   volume = "32",
   year = "1979"    )
+
+@article{KuehnRadach1997,
+   author   = {Wilfried K\"uhn and G\"unther Radach},
+   title    = {A one-dimensional physical-biological model study of the
+               pelagic nitrogen cycling during the spring bloom in the
+               northern {N}orth {S}ea ({FLEX}'76)},
+   journal  = JMR,
+   volume   = {55},
+   pages    = {687-734},
+   year     = {1997},
+   note     = {},
+}
+
 
 @article(Kundu80,
   author = "P.~K. Kundu",
@@ -2121,6 +2244,18 @@ Cross Section",
   volume = "68",
   pages = "537--566",
   year = "1975"    )
+
+@article{Leonhard91,
+   author   = {B. P. Leonard},
+   title    = {The {ULTIMATE} conservative difference scheme applied
+               to unsteady one-dimensional advection},
+   journal  = CMAME,
+   volume   = {88},
+   pages    = {17-74},
+   year     = {1991},
+   note     = {},
+}
+
 
 @article(Lemmin87,
   author = "U. Lemmin",
@@ -2539,6 +2674,18 @@ deductive approach",
   journal = "J. Meteor.",
   year = "1950"    )
 
+@article{Neumannetal2002,
+   author   = {Thomas Neumann and Wolfgang Fennel and Christine Kremp},
+   title    = {Experimental simulations with an ecosystem model of the
+               {B}altic {S}ea: {A} nutrient load reduction experiment},
+   journal  = GBC,
+   volume   = {16},
+   pages    = {10.1029/2001GB001450},
+   year     = {2002},
+   note     = {},
+}
+
+
 @article(NgSpalding72,
   author = "K.~H. Ng and D.~B. Spalding",
   title = "Turbulence model for boundary layers near walls",
@@ -2798,6 +2945,32 @@ simulated and observed vertical distributions",
   pages = "6--19",
   year = "1945"    )
 
+
+@article{Radachetal1980,
+   author   = {G. Radach and J. Trahms and A. Weber},
+   title    = {The chloroophyll development at the central station during
+               {FLEX} '76 -- {T}wo data sets.},
+   journal  = {CES C.M.},
+   volume   = {C3},
+   pages    = {3-21},
+   year     = {1980},
+   note     = {},
+}
+
+@inproceedings{Radachetal1984,
+   author   = {G. Radach and J. Berg and B. Heinemann and M. Krause},
+   title    = {On the relation of primary production to grazing during
+              the {F}ladenground {E}xperiment 1976 ({FLEX} '76)},
+   booktitle    = {Flows of Engergy and Materials in Marine Ecosystems},
+   editor   = {M. J. R. Fasham},
+   organization = {NATO Conf. Ser. IV: Marine Sciences 13},
+   address  = {New York},
+   pages    = {597-625},
+   year     = {1984},
+   note     = {},
+}
+
+
 @article(Rajar97,
   author = "R. Rajar and M. Cetina",
   title = "Hydrodynamic and water qualitiy modelling: {A}n experience",
@@ -3056,6 +3229,19 @@ in dissolved oxygen",
   number = "8",
   pages = "1780-1795",
   year = "1998"                )
+
+@book{Samarskij84,
+   author   = {A. A. Samarskij},
+   title    = {Theorie der {D}ifferenzenverfahren},
+   publisher = {Akademische Verlagsgesellschaft Geest and Portig},
+   address  = {Leipzig},
+   series   = {},
+   volume   = {},
+   eddition   = {},
+   year     = {1984},
+   note     = {},
+}
+
 
 @article(Sander98a,
   author = "J. Sander",
@@ -4054,6 +4240,18 @@ some literature",
   pages = "257--277",
   year = "?"    )
 
+@article{Visser1997,
+   author   = {A. W. Visser},
+   title    = {Using random walk models to simulate the vertical
+               distribution of particles in a turbulent water column},
+   journal  = MEPS,
+   volume   = {158},
+   pages    = {275-281},
+   year     = {1997},
+   note     = {},
+}
+
+
 @phdthesis(Wang95,
   author = "Y. Wang",
   title  = "Windgetriebene Strömungen in einem Rechteckbecken und im Bodensee",
@@ -4099,6 +4297,19 @@ some literature",
   volume = "8",
   pages = "557--570",
   year = "1978"    )
+
+@article{Weigeletal1980,
+   author   = {P. Weigel and E. Hagmeier},
+   title    = {Primary production measurements in the {F}laden {G}round
+               area ({N}orth {S}ea) during the first phase of a spring
+              phytoplankton bloom},
+   journal  = {"Meteor"-Forsch.-Ergebnisse, Reihe A},
+   volume   = {22},
+   pages    = {79-86},
+   year     = {1980},
+   note     = {},
+}
+
 
 @article(Weinstock78a,
   author = "J. Weinstock",
