Weiss 1970 formula now used for surface oxygen saturation calculation in bio_mab.F90

--- a/doc/gotm.bib
+++ b/doc/gotm.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm.bib,v 1.4 2005-12-02 20:21:54 hb Exp $
+%$Id: gotm.bib,v 1.5 2005-12-27 11:23:04 hb Exp $
 %
 
 @String{OMOD = "Ocean Modelling"}
@@ -17,6 +17,7 @@
 @String{QJR = "Q. J. R. Meteorol. Soc."}
 @String{JAOT = "Journal of Atmospheric and Oceanic Technology"}
 @String{GBC = "Global Biogeochemical Cycles"}
+@String{DSR = "Deep-Sea Research"}
 
 
 @String{acc = "Accepted for publication"}
@@ -4335,6 +4336,18 @@ some literature",
   number = "C8",
   pages = "12653--12658",
   year = "1992"    )
+
+@article{Weiss1970,
+   author   = {R. F. Weiss},
+   title    = {The solubility of nitrogen, oxygen and argon in water and sea
+               water},
+   journal  = DSR,
+   volume   = {17},
+   pages    = {721-735},
+   year     = {1970},
+   note     = {},
+}
+
 
 @book(Wetzel83,
   author = "R.~G. Wetzel",
