[Cc]harnok -> [Cc]harnock - A. Jenkins

--- a/doc/gotm.bib
+++ b/doc/gotm.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm.bib,v 1.5 2005-12-27 11:23:04 hb Exp $
+%$Id: gotm.bib,v 1.6 2006-11-20 17:26:14 kbk Exp $
 %
 
 @String{OMOD = "Ocean Modelling"}
@@ -704,8 +704,8 @@ Method for Three-Dimensional Shallow Water Flow",
   year = "1992",
   notes = "in press"    )  
 
-@article{Charnok55,
-   author   = {H. Charnok},
+@article{Charnock55,
+   author   = {H. Charnock},
    title    = {Wind stress on a water surface},
    journal  = QJR,
    volume   = {81},
