Burchard et al. 2006, JMS updated

--- a/doc/gotm.bib
+++ b/doc/gotm.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm.bib,v 1.6 2006-11-20 17:26:14 kbk Exp $
+%$Id: gotm.bib,v 1.7 2006-12-03 13:53:16 hb Exp $
 %
 
 @String{OMOD = "Ocean Modelling"}
@@ -563,10 +563,10 @@ $k-\epsilon$ two-equation turbulence models",
    title    = {Description of a flexible and extendable
                physical-biogeochemical model system for the water column},
    journal  = JMS,
-   volume   = {},
-   pages    = {},
-   year     = {2005},
-   note     = acc,
+   volume   = {61},
+   pages    = {180-211},
+   year     = {2006},
+   note     = {},
 }
 
 
