--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm_pub.bib,v 1.1 2006-11-24 07:26:15 kbk Exp $
+%$Id: gotm_pub.bib,v 1.2 2006-12-03 13:53:16 hb Exp $
 %
 
 %@String{OMOD = "Ocean Modelling"}
@@ -101,7 +101,11 @@
    title     = {Description of a flexible and extendable
                 physical-biogeochemical model system for the water column},
    journal   = JMS,
+   volume   = {61},
+   pages    = {180-211},
+   year     = {2006},
    year      = {2006},
+   note     = {},
 }
 
 @article{stipsetal_2005,
