--- a/doc/gotm.bib
+++ b/doc/gotm.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm.bib,v 1.7 2006-12-03 13:53:16 hb Exp $
+%$Id: gotm.bib,v 1.8 2007-01-04 13:21:30 hb Exp $
 %
 
 @String{OMOD = "Ocean Modelling"}
@@ -9,6 +9,7 @@
 @String{Franzius = "Mitteilungen des Franzius-Institutes"}
 @STRING{JGR = "J. Geophys. Res."}
 @String{ECSS = "Estuarine, Coastal and Shelf Science"}
+@String{EST = "Estuaries"}
 @String{OD = "Ocean Dynamics"}
 @STRING{UNESCO = "Unesco technical papers in marine sciences"}
 @String{EFM = "Environmental Fluid Mechanics"}
@@ -1372,6 +1373,17 @@ Equations with Topography",
   volume = "200",
   pages = "563--594",
   year = "1989"   )
+
+@article{Geyer93,
+   author   = {W. R. Geyer},
+   title    = {The importance of suppression of turbulence by stratification
+               on the estuarine turbidity maximum},
+   journal  = EST,
+   volume   = {16},
+   pages    = {113-125},
+   year     = {1993},
+}
+
 
 @article(GibsonLaunder76,
   author = "M.~M. Gibson and B.~E. Launder",
